complete influencer gear full design

--- a/influencer-gear/index.htm
+++ b/influencer-gear/index.htm
@@ -49,13 +49,198 @@
 
         <section class="popular-collection">
             <h1 class="product-title">Popular Collection</h1>
-            <div class="collection items">
+            <div class="collection-items">
+                <div class="item">
+                    <div class="item-img">
+                        <img src="./images/tripod.png" alt="Camera">
+                    </div>
+                    <h2 class="item-title">Flex Tripod</h2>
+                    <h3 class="item-price">$50.48</h3>
+                    <div class="item-rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>        
+                        </div>
+                        <h3 class="item-rating-number">4.9</h3>
+                    </div>
+                    <p class="short-desc">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="./images/mic.png" alt="Camera">
+                    </div>
+                    <h2 class="item-title">Flex Tripod</h2>
+                    <h3 class="item-price">$50.48</h3>
+                    <div class="item-rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>        
+                        </div>
+                        <h3 class="item-rating-number">4.9</h3>
+                    </div>
+                    <p class="short-desc">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="./images/airpod.png" alt="Camera">
+                    </div>
+                    <h2 class="item-title">Flex Tripod</h2>
+                    <h3 class="item-price">$50.48</h3>
+                    <div class="item-rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>        
+                        </div>
+                        <h3 class="item-rating-number">4.9</h3>
+                    </div>
+                    <p class="short-desc">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="./images/drone.png" alt="Camera">
+                    </div>
+                    <h2 class="item-title">Flex Tripod</h2>
+                    <h3 class="item-price">$50.48</h3>
+                    <div class="item-rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>        
+                        </div>
+                        <h3 class="item-rating-number">4.9</h3>
+                    </div>
+                    <p class="short-desc">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="./images/lights.png" alt="Camera">
+                    </div>
+                    <h2 class="item-title">Flex Tripod</h2>
+                    <h3 class="item-price">$50.48</h3>
+                    <div class="item-rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>        
+                        </div>
+                        <h3 class="item-rating-number">4.9</h3>
+                    </div>
+                    <p class="short-desc">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="./images/setup.png" alt="Camera">
+                    </div>
+                    <h2 class="item-title">Flex Tripod</h2>
+                    <h3 class="item-price">$50.48</h3>
+                    <div class="item-rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>        
+                        </div>
+                        <h3 class="item-rating-number">4.9</h3>
+                    </div>
+                    <p class="short-desc">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="./images/camera.png" alt="Camera">
+                    </div>
+                    <h2 class="item-title">Flex Tripod</h2>
+                    <h3 class="item-price">$50.48</h3>
+                    <div class="item-rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>        
+                        </div>
+                        <h3 class="item-rating-number">4.9</h3>
+                    </div>
+                    <p class="short-desc">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="./images/action.png" alt="Camera">
+                    </div>
+                    <h2 class="item-title">Flex Tripod</h2>
+                    <h3 class="item-price">$50.48</h3>
+                    <div class="item-rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>        
+                        </div>
+                        <h3 class="item-rating-number">4.9</h3>
+                    </div>
+                    <p class="short-desc">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="./images/single-light.png" alt="Camera">
+                    </div>
+                    <h2 class="item-title">Flex Tripod</h2>
+                    <h3 class="item-price">$50.48</h3>
+                    <div class="item-rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>        
+                        </div>
+                        <h3 class="item-rating-number">4.9</h3>
+                    </div>
+                    <p class="short-desc">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="see-more-section">
+                <p class="see-more">See More <i class="fa-solid fa-arrow-right"></i></p>
             </div>
         </section>
 
+        <section class="featured-products">
+            <div class="left-side">
+                <img src="./images/gear.png" alt="Featured Product">
+            </div>
+            <div class="right-side">
+                <h1 class="product-title">Featured Product</h1>
+                <p class="footer-desc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="primary-btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="footer-container">
+            <h2 class="footer-title">Influencer products</h2>
+            <p class="copyright">© 2023 Excel eShop. All rights reserved.</p>
+            <div class="social-icons">
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+        </div>
     </footer>
     
 </body>
