--- a/influencer-gear/index.htm
+++ b/influencer-gear/index.htm
@@ -37,13 +37,14 @@
 
         <section class="brands">
             <div class="brand-imgs">
-                <img src="./logos/Alibaba.svg" alt="">
-                <img src="./logos/Amazon.svg" alt="">
-                <img src="./logos/Daraz.pk Logo.svg" alt="">
-                <img src="./logos/Ebay.svg" alt="">
-                <img src="./logos/Rakuten.svg" alt="">
-                <img src="./logos/Target.svg" alt="">
-                <img src="./logos/Walmart.svg" alt="">
+                <div class="brand-img"> <img src="./logos/Alibaba.svg" alt=""></div>
+                <div class="brand-img"><img src="./logos/Amazon.svg" alt=""> </div>
+                <div class="brand-img"> <img src="./logos/Daraz.pk Logo.svg" alt=""></div>
+                <div class="brand-img"><img src="./logos/Ebay.svg" alt=""> </div>
+                <div class="brand-img"> <img src="./logos/Rakuten.svg" alt=""></div>
+                <div class="brand-img"><img src="./logos/Target.svg" alt=""> </div>
+                <div class="brand-img"> <img src="./logos/Walmart.svg" alt=""></div>
+                
             </div>
         </section>
 
