--- a/influencer-gear/index.htm
+++ b/influencer-gear/index.htm
@@ -63,7 +63,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>        
+                            <i class="fa-solid fa-star" style="clip-path: inset(0 30% 0 0)"></i>        
                         </div>
                         <h3 class="item-rating-number">4.9</h3>
                     </div>
